--- a/packages/recomponents/src/components/r-select/r-select.scss
+++ b/packages/recomponents/src/components/r-select/r-select.scss
@@ -162,7 +162,7 @@ fieldset[disabled] .r-select {
     overflow: hidden;
     display: inline-block;
     text-overflow: ellipsis;
-    vertical-align: bottom;
+    vertical-align: middle;
 }
 
 .r-select__current {
