--- a/packages/recomponents/src/components/r-select/r-select.scss
+++ b/packages/recomponents/src/components/r-select/r-select.scss
@@ -7,7 +7,7 @@ fieldset[disabled] .r-select {
     position: absolute;
     right: 1px;
     top: 1px;
-    height: 34px;
+    height: 30px;
     width: 40px;
     border-radius: var(--select-spinner-border-radius);
     background: var(--select-spinner-background-color);
@@ -81,7 +81,6 @@ fieldset[disabled] .r-select {
 .r-select--disabled {
     background: var(--select-disabled-background);
     color: var(--select-disabled-color);
-    box-shadow: var(--select-disabled-box-shadow);
     pointer-events: none;
     opacity: var(--select-disabled-opacity);
 
@@ -156,6 +155,11 @@ fieldset[disabled] .r-select {
     box-shadow: var(--select-tags-box-shadow);
 }
 
+.r-select__tags .r-badge .r-badge-icon {
+    width: 16px;
+    height: 16px;
+}
+
 .is-error .r-select__tags {
     box-shadow: 0 0 0 1px var(--negative-color-dark) inset;
     background: rgba(255, 212, 211, 0.6);
@@ -164,9 +168,8 @@ fieldset[disabled] .r-select {
 .r-select__tag-text {
     width: calc(100% - 16px - var(--badge-tag-icon-margin-left));
     overflow: hidden;
-    display: inline-block;
     text-overflow: ellipsis;
-    vertical-align: middle;
+    vertical-align: baseline;
 }
 
 .r-select__current {
