fix(component): Remove margin bottom for field groups

--- a/packages/recomponents/src/components/r-input/r-input.scss
+++ b/packages/recomponents/src/components/r-input/r-input.scss
@@ -132,6 +132,10 @@ textarea.r-field-input {
     padding-left: 0;
 }
 
+.r-field-addon .r-field-label-toggle {
+    margin-bottom: 0;
+}
+
 // Removing Firefox dotted line
 select:-moz-focusring {
     color: transparent;
