fix(r-loader): Update r-loader styles trying to fix secondary mode

--- a/packages/recomponents/src/styles/theme.scss
+++ b/packages/recomponents/src/styles/theme.scss
@@ -443,6 +443,9 @@ body, .article {
     --input-has-icon-right-padding: var(--space-s) var(--space-l) var(--space-s) var(--space-m);
     --input-has-icon-left-padding: var(--space-s) var(--space-m) var(--space-s) var(--space-l);
     --input-addon-background: #F9FAFB;
+
+
+
     --input-addon-box-shadow: 0 0 0 1px var(--gray-color) inset;
     --input-disabled-background: var(--background-color);
     --input-disabled-box-shadow: 0 0 0 1px var(--gray-color) inset;
@@ -451,8 +454,9 @@ body, .article {
 
     // Loader
     // ------------------------------------------------
-    --loader-background: var(--gray-color);
+    --loader-background: var(--background-color);
     --loader-z-index: var(--z-index-1000);
+    --loader-wrapper-color: #A1B2C1;
     --loader-border-radius: var(--border-radius);
 
     // Tiles
