--- a/packages/recomponents/src/components/r-loader/r-loader.scss
+++ b/packages/recomponents/src/components/r-loader/r-loader.scss
@@ -1,82 +1,94 @@
 .r-loader {
-    position: fixed;
+    position: absolute;
     z-index: var(--loader-z-index);
-    margin: auto;
+    background: var(--loader-background);
+    display: none;
+    bottom: 0;
+    right: 0;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    opacity: 1;
     transition: opacity 0.3s ease-out;
+    border-radius: var(--loader-border-radius);
 
-    .wrapper {
+    .r-loader-wrapper {
         display: block;
-        position: absolute;
+        position: relative;
         width: 36px;
         height: 36px;
-        background: var(--loader-background);
-        border-radius: var(--loader-border-radius);
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        margin: auto;
+        background: var(--loader-wrapper-color);
+        border-radius: 4px;
 
-        > * {
-            transition: height .3s ease;
+        * {
             display: block;
             position: absolute;
+            transition: height 0.3s ease;
             transform-origin: top;
             transform: rotate(180deg);
             width: 4px;
-            background: var(--background-color);
+            background: var(--mono-color-0);
+        }
+
+        .r-mr-re {
+            top: 28px;
+            left: 9px;
+            height: 14px;
+            animation: r-mr-re-reset .5s normal;
+        }
+
+        .r-mr-bil {
+            top: 28px;
+            left: 16px;
+            height: 17px;
+            animation: r-mr-bil-reset .5s normal;
+        }
+
+        .r-mr-ly {
+            top: 28px;
+            left: 23px;
+            height: 20px;
+            animation: r-mr-ly-reset .5s normal;
         }
     }
-
-    .mr-re {
-        top: 28px;
-        left: 9px;
-        height: 14px;
-        animation: mr-re-reset .5s normal;
-    }
-
-    .mr-bil {
-        top: 28px;
-        left: 16px;
-        height: 17px;
-        animation: mr-bil-reset .5s normal;
-    }
-
-    .mr-ly {
-        top: 28px;
-        left: 23px;
-        height: 20px;
-        animation: mr-ly-reset .5s normal;
-    }
-
     &--loading {
-        .mr-re {
-            height: 0px;
-            animation: mr-re-animation 1s infinite;
-        }
+        display: block;
+        position: absolute;
+        opacity: 0.8;
 
-        .mr-bil {
-            height: 0px;
-            animation: mr-bil-animation 1s .2s infinite;
-        }
+        .r-loader-wrapper {
+            position: absolute;
+            background-clip: padding-box;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
 
-        .mr-ly {
-            height: 0px;
-            animation: mr-ly-animation 1s .4s infinite;
+            .r-mr-re {
+                height: 0px;
+                animation: r-mr-re-animation 1s infinite;
+            }
+
+            .r-mr-bil {
+                height: 0px;
+                animation: r-mr-bil-animation 1s .2s infinite;
+            }
+
+            .r-mr-ly {
+                height: 0px;
+                animation: r-mr-ly-animation 1s .4s infinite;
+            }
         }
+    }
+    &--secondary {
+        background: var(--background-color-light);
     }
 
     &--fullscreen {
         position: fixed;
-        background: var(--background-color);
+        opacity: 1;
     }
 }
 
-@keyframes mr-re-animation {
+@keyframes r-mr-re-animation {
     0% {
         height: 0;
     }
@@ -88,7 +100,7 @@
     }
 }
 
-@keyframes mr-re-reset {
+@keyframes r-mr-re-reset {
     0% {
         height: 0;
     }
@@ -97,7 +109,7 @@
     }
 }
 
-@keyframes mr-bil-animation {
+@keyframes r-mr-bil-animation {
     0% {
         height: 0;
     }
@@ -109,7 +121,7 @@
     }
 }
 
-@keyframes mr-bil-reset {
+@keyframes r-mr-bil-reset {
     0% {
         height: 0;
     }
@@ -118,7 +130,7 @@
     }
 }
 
-@keyframes mr-ly-animation {
+@keyframes r-mr-ly-animation {
     0% {
         height: 0;
     }
@@ -130,7 +142,7 @@
     }
 }
 
-@keyframes mr-ly-reset {
+@keyframes r-mr-ly-reset {
     0% {
         height: 0;
     }
