--- a/packages/recomponents/src/components/r-avatar/r-avatar.scss
+++ b/packages/recomponents/src/components/r-avatar/r-avatar.scss
@@ -14,6 +14,8 @@
 }
 
 .avatar-image {
+    position: relative;
+    overflow: hidden;
     width: 36px;
     height: 36px;
     margin-right: 0;
@@ -21,11 +23,28 @@
     flex: 0 0 auto;
 }
 
+.avatar-image-image {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+
+    figure {
+        width: 100%;
+        height: 100%;
+        margin: 0;
+
+        img {
+            width: 100%;
+        }
+    }
+}
+
 .avatar.avatar-description > .avatar-image {
     margin-right: var(--avatar-margin-right);
 }
 
-.avatar-info > * {
+.avatar-info * {
     margin: 0;
     line-height: var(--avatar-font-line-height);
 }
