fix(component): Add R prefix to component

--- a/packages/recomponents/src/styles/theme.scss
+++ b/packages/recomponents/src/styles/theme.scss
@@ -180,6 +180,8 @@ body, .article {
     --avatar-background-accent: var(--accent-color);
     --avatar-background-dark-background: var(--gray-color-dark);
     --avatar-description-margin-right: var(--space-m);
+    --avatar-main-font-veight: var(--font-weight-medium);
+    --avatar-main-font-family: var(--secondary-font-stack);
 
     // Badges
     // ------------------------------------------------
