--- a/packages/recomponents/src/components/r-avatar/r-avatar.scss
+++ b/packages/recomponents/src/components/r-avatar/r-avatar.scss
@@ -1,19 +1,15 @@
-// -----------------------------------------------------------------------------
-// This file contains all styles related to the avatar component.
-// -----------------------------------------------------------------------------
-
-.avatar {
+.r-avatar {
     max-width: 100%;
     display: inline-block;
     position: relative;
 }
 
-.avatar.avatar-description {
+.r-avatar-description {
     display: flex;
     align-items: center;
 }
 
-.avatar-image {
+.r-avatar-main {
     position: relative;
     overflow: hidden;
     width: 36px;
@@ -23,7 +19,7 @@
     flex: 0 0 auto;
 }
 
-.avatar-image-image {
+.r-avatar-image {
     width: 100%;
     height: 100%;
     top: 0;
@@ -33,87 +29,69 @@
         width: 100%;
         height: 100%;
         margin: 0;
+    }
 
-        img {
-            width: 100%;
-        }
+    img {
+        width: 100%;
     }
 }
 
-.avatar.avatar-description > .avatar-image {
+.r-avatar.r-avatar-description > .r-avatar-main {
     margin-right: var(--avatar-margin-right);
 }
 
-.avatar-info * {
+.r-avatar-info * {
     margin: 0;
     line-height: var(--avatar-font-line-height);
 }
 
-.avatar-info .avatar-info-muted-text {
+.r-avatar-info .r-avatar-info-muted-text {
     color: var(--text-muted);
 }
 
-.avatar-icon,
-.avatar-initials {
+.r-avatar-icon,
+.r-avatar-initials {
     border-radius: var(--avatar-border-radius);
     padding: var(--avatar-padding);
     background: var(--avatar-background);
 }
 
-.avatar-initials {
+.r-avatar-initials {
     position: relative;
     padding: 0;
     width: 36px;
     height: 36px;
     text-align: center;
+
+    span {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: #FFFFFF;
+        font-weight: var(--avatar-main-font-veight);
+        font-family: var(--avatar-main-font-family);
+        text-transform: uppercase;
+    }
 }
 
-.avatar-initials-gray {
+.r-avatar-initials-gray {
     background-color: var(--avatar-background-gray);
 }
 
-.avatar-initials-yellow {
+.r-avatar-initials-yellow {
     background-color: var(--avatar-background-yellow);
 }
 
-.avatar-initials-green {
+.r-avatar-initials-green {
     background-color: var(--avatar-background-green);
 }
 
-.avatar-initials-accent {
+.r-avatar-initials-accent {
     background-color: var(--avatar-background-accent);
 }
 
-.avatar-initials-dark-background {
+.r-avatar-initials-dark-background {
     background-color: var(--avatar-background-dark-background);
 }
 
-.avatar-initials span {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: #FFFFFF;
-    // font-weight: $medium;
-    // font-family: $secondary-font-stack;
-    text-transform: uppercase;
-}
-
-// Sizes
-.avatar-l {
-    & .avatar-image,
-    & .avatar-image .image,
-    & .avatar-initials {
-        width: 64px;
-        height: 64px;
-    }
-    & .avatar-info > * {
-        // line-height: $line-height;
-    }
-    & .avatar-initials span {
-        // @include rem(font-size, 20px);
-    }
-    &.avatar-description > .avatar-image {
-        margin-right: var(--avatar-description-margin-right);
-    }
-}
