fix(all): some of CSS vars  are not defined but are used

--- a/packages/recomponents/src/components/r-popper/r-popper.scss
+++ b/packages/recomponents/src/components/r-popper/r-popper.scss
@@ -343,7 +343,7 @@
 }
 
 .r-popover.r-popover-dark .r-popover-menu-item .avatar-info .avatar-info-muted-text {
-    color: var(--light-gray-color);
+    color: var(--gray-color-light);
 }
 
 .r-popover.r-popover-dark .r-popover-menu-item:hover, .r-popover.r-popover-dark .r-popover-menu-item:focus, .r-popover.r-popover-dark .r-popover-menu-item:active {
