--- a/packages/recomponents/src/styles/theme.scss
+++ b/packages/recomponents/src/styles/theme.scss
@@ -196,6 +196,7 @@ body, .article {
     --badge-font-line-height: var(--font-line-height-p);
     --badge-box-shadow: 0 0 0 2px var(--mono-color-0);
     --badge-default-background: var(--mono-color-200);
+    --badge-default-border: none;
     --badge-positive-background: var(--positive-color-light);
     --badge-positive-border: none;
     --badge-negative-background: var(--negative-color-light);
@@ -215,6 +216,7 @@ body, .article {
     --badge-tag-secondary-color: var(--mono-color-700);
     --badge-tag-secondary-border-radius: var(--border-radius-xxs);
     --badge-tag-secondary-box-shadow: 0 0 0 1px var(--gray-color);
+    --badge-tag-icon-margin-left: var(--space-xs);
 
     // Buttons
     // ------------------------------------------------
@@ -610,7 +612,7 @@ body, .article {
 
     --modal-overlay-background-color: rgba(80, 90, 111, .4);
     --modal-overlay-z-index: 800;
-    --modal-overlay-padding: 8.8rem 0 3.2rem 0;
+    --modal-overlay-padding: calc(var(--space-l) + 56) 0 var(--space-l) 0;
     --modal-control-background-color: #FFFFFF;
     --modal-control-z-index: 2001;
     --modal-control-box-shadow: 0 0 0 1px rgba(107, 115, 132, 0.09), 0 25px 45px -8px rgba(80, 90, 111, 0.30), 0 3px 6px 0 rgba(80, 90, 111, 0.07);
