--- a/packages/recomponents/src/styles/theme.scss
+++ b/packages/recomponents/src/styles/theme.scss
@@ -152,6 +152,7 @@ body, .article {
     // Z-Index
     // ------------------------------------------------
     --z-index-1000: 1000;
+    --z-index-801: 801;
     --z-index-800: 800;
     --z-index-100: 100;
     --z-index-90: 90;
@@ -473,7 +474,8 @@ body, .article {
     // Loader
     // ------------------------------------------------
     --loader-background: var(--background-color);
-    --loader-z-index: var(--z-index-800);
+    --loader-z-index-inline: var(--z-index-800);
+    --loader-z-index-fullscreen: var(--z-index-801);
     --loader-wrapper-color: #A1B2C1;
     --loader-border-radius: var(--border-radius);
 
