--- a/packages/recomponents/src/styles/mixins.scss
+++ b/packages/recomponents/src/styles/mixins.scss
@@ -4,6 +4,16 @@
 //     padding-top: 4rem;
 //     font-size: 2.4rem;
 // }
+// Media Breakpoints
+// ------------------------------------------------
+$breakpoints: (
+        'phone': 576px,
+        'tablet': 768px,
+        'small-desktop': 994px,
+        'desktop': 1100px,
+        'large-desktop': 1200px,
+) !default;
+
 @mixin media-query-breakpoint($width, $type: min) {
     @if map_has_key($breakpoints, $width) {
         $width: map_get($breakpoints, $width);
