feat(r-img): Add aspect ratio prop and preload state spinner

--- a/packages/recomponents/src/styles/theme.scss
+++ b/packages/recomponents/src/styles/theme.scss
@@ -631,4 +631,7 @@ body, .article {
     // -----------------------------------------------------
 
     --pagination-buttons-margin: 0 var(--space-xxs);
+
+    // Image
+    --image-spinner-color: var(--primary-color);
 }
