fix(r-img): fix the img aspect ratio story

--- a/packages/recomponents/src/components/r-img/r-img.scss
+++ b/packages/recomponents/src/components/r-img/r-img.scss
@@ -11,6 +11,10 @@
     width: 100%;
 }
 
+.r-img[style*="--img-aspect-ratio"] > img {
+    max-width: 100%;
+}
+
 .r-img-spinner {
     display: block;
 }
