--- a/packages/recomponents/src/styles/recomm.scss
+++ b/packages/recomponents/src/styles/recomm.scss
@@ -615,7 +615,7 @@ body, .article {
 
     --modal-overlay-background-color: rgba(80, 90, 111, .4);
     --modal-overlay-z-index: 800;
-    --modal-overlay-padding: calc(var(--space-l) + 56) 0 var(--space-l) 0;
+    --modal-overlay-padding: 88px 0 32px 0;
     --modal-control-background-color: #FFFFFF;
     --modal-control-z-index: 2001;
     --modal-control-box-shadow: 0 0 0 1px rgba(107, 115, 132, 0.09), 0 25px 45px -8px rgba(80, 90, 111, 0.30), 0 3px 6px 0 rgba(80, 90, 111, 0.07);
