fix(RModal): adjust missing CSS

--- a/packages/recomponents/src/components/r-modal/r-modal.scss
+++ b/packages/recomponents/src/components/r-modal/r-modal.scss
@@ -77,6 +77,11 @@
     padding: var(--modal-padding);
 }
 
+.r-modal-content-inner {
+    border-bottom: none;
+    margin: -20px;
+}
+
 .r-modal-header h2 {
     margin: 0;
     text-transform: capitalize;
